assets/scss/3-modules/_mega-nav.scss
/*  Mega Nav displays expanded at 992px and larger
    991px and lower displays the "hamburger" mobile-style menu
===================================================  */

.navbar {
  background-color: $primary-blue;
  margin-top: 56px; // make room for the global-nav in mobile view
}

@media screen and (min-width: 992px) {
  .navbar {
    background-color: transparent;
    background-image: url(../../assets/img/menu-bg.png);
    background-position: center top;
    background-repeat: no-repeat;
    background-size: 3840px 271px;
    margin-top: 0;
    min-height: 251px;
    height: 251px;
    pointer-events: none;
  }
}

@media screen and (min-width:992px) {
  .navbar-nav {
  margin-top: -100px
  }
}
/* adds some margin below the link sets  */
.navbar .dropdown-menu div[class*="col"] {
   margin-bottom: 1rem;
}

.navbar .dropdown-menu {
  border:none;
  background-color: #f5f6f8 !important;
  margin-left: auto;
  margin-right: auto;
  margin-top: 60px;
}

/* breakpoint and up - mega dropdown styles */
@media screen and (min-width: 992px) {

    /* remove the padding from the navbar so the dropdown hover state is not broken */
  .navbar {
    padding-bottom:0px;
  }

  /* remove the padding from the nav-item and add some margin to give some breathing room on hovers */
  .navbar .nav-item {
    padding:.5rem .5rem;
    margin:0 .25rem;
  }

@media screen and (min-width: 992px) {
    .navbar .nav-item {
      margin-top: 12px;
      padding-bottom: 12px;
    }
}

  /* makes the dropdown full width  */
  .navbar .dropdown {
    position:static;
  }

  .navbar .dropdown-menu {
    border: none;
    left:0;
    right:0;
  /*  height of nav-item  */
    top:50px;
    width:90%;
  }

  @-webkit-keyframes meganav {
    0%  {opacity: 0;}
    100%  {opacity: 1;}
  }
  @keyframes meganav {
    0%  {opacity: 0;}
    100%  {opacity: 1;}
  }
}

  /* shows the dropdown menu on hover */
@media screen and (min-width: 992px) {
  .navbar .dropdown:hover .dropdown-menu, .navbar .dropdown .dropdown-menu:hover {
    display:block!important;
    -webkit-animation-name: meganav;
    -webkit-animation-duration: .6s;
    animation-name: meganav;
    animation-duration: .6s;
  }
}

.dropdown:hover, .dropdown:hover a.nav-link {
  color: $primary-blue !important;
  background-color: #f5f6f8;
}

.nav-link:hover {
  color: $primary-blue;
}

@media screen and (min-width: 992px) {
  .drop-pad {
    padding-top: 25px;
  }
}

.nav-row {
  margin-bottom: 0;
  margin-top: 0;
  padding-bottom: 0;
  padding-top: 0;
}

@media screen and (min-width: 992px) {
  .nav-row {
    border-bottom: 3px #000000 solid;
    margin-bottom: 8px;
  }
}

.dark-text {
  color: #000000 !important;
}

.dark-text:hover {
  color: #818181 !important;
}

.nav-img {
  margin-top: 20px;
  margin-left: -10px;
}

@media screen and (min-width: 1100px) {
  .nav-img {
    margin-bottom: 20px;
    margin-left: -20px;
  }
}

@media screen and (min-width: 1600px) {
  .nav-img {
    margin-left: -80px;
  }
}

.no-pad {
  margin-bottom: 0;
  margin-top: 0;
  padding-bottom: 0;
  padding-top: 0;
}

.facilities-drop-pad {
  padding-top: 80px;
}

.donate-drop-pad {
  padding-top: 80px;
}

.about-drop-pad {
  padding-top: 50px;
}


.cavs-logo {
  height: auto;
  position: absolute;
  top: 15px;
  width: 150px;
  z-index: 9999;
}

@media screen and (min-width: 992px) {
  .cavs-logo {
    top: 10px;
    width: 15%;
  }
}

.nav-split {
  margin-right: 340px !important;
}

.center-logo {
  left: 50%; // center the absolutely positioned item
  margin-left: -105px; // offset the width of the item to make true center
  margin-top: -115px; // position it vertically
  position: absolute;
  width: 210px;
}

// Don't display the dropdown carrots for menu items
.dropdown-toggle::after {
    display:none
}

.clickable {
  pointer-events: auto;
  margin-left: auto;
  margin-right: auto;
}

